Fixed bug when opening details on mobile

--- a/src/app/search/search-details/search-details.component.scss
+++ b/src/app/search/search-details/search-details.component.scss
@@ -55,9 +55,11 @@
     }
 
     .company-logo-thumb-container {
+
       img {
         display: block;
         width: 90%;
+        background-color: $white;
       }
     }
 
